examples/test/testpolicy15782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15782
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key40: value20
      key48: value33
      key37: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value19
          key47: value34
      podSelector:
        matchLabels:
          key18: value21
          key1: value38
